# cloud-run-playground

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: deploy-job.yml  deploy.yml
app/: Dockerfile  main.py  pyproject.toml
jobs/hello-world/: Dockerfile  main.py  pyproject.toml
terraform/: .terraform.lock.hcl  cloud-run-jobs.tf  cloud-run.tf  gcp.tf  job.tf  main.tf  outputs.tf  terraform.tfstate  terraform.tfstate.backup  terraform.tfvars  tfc-workspace.tf  variables.tf
